--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="page">
 
-  <div class="content">
+  
 
     <header class="header">
       <img src="./images/header/header-logo.svg" class="header__logo" alt="лого">
@@ -68,7 +68,7 @@
         <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
-            <p class="place__url-heading ">URL</p>
+            <p class="place__url-heading ">url</p>
             <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./images/places/place-kosa.jpg" alt="коса">
@@ -181,7 +181,7 @@
       <p class="footer__copyright">© 2022. Филимонов Алексей</p>
     </footer>
 
-  </div>
+  
 
 </body>
 
