--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <p class="place__url-heading ">URL</p>
+            <p class="place__url-heading ">url</p>
             <a class="place__link" href="
             https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
@@ -105,7 +105,7 @@
         <article class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <p class="place__url-heading ">URL</p>
+            <p class="place__url-heading ">url</p>
             <a class="place__link" href="
             https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
@@ -124,7 +124,7 @@
         <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <p class="place__url-heading ">URL</p>
+            <p class="place__url-heading ">url</p>
             <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/places/place-winter-baikal.jpg" alt="Байкал">
@@ -142,7 +142,7 @@
         <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <p class="place__url-heading ">URL</p>
+            <p class="place__url-heading ">url</p>
             <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/places/place-karelia.jpg" alt="Карелия">
